# micro-opus

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  Kconfig  NOTICE  README.md  idf_component.yml  library.json
.github/workflows/: ci.yml  publish.yml  release-drafter.yml
cmake/: dependencies.cmake  esp-idf.cmake  functions.cmake  host.cmake  sources.cmake  staging.cmake
examples/decode_benchmark/: .gitignore  README.md  platformio.ini  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3  sdkconfig.esp32-s3
examples/decode_benchmark/src/: decode_benchmark.cpp
examples/encode_benchmark/: README.md  sdkconfig.defaults  sdkconfig.esp32-s3
examples/encode_benchmark/src/: encode_benchmark.cpp
host_examples/opus_to_wav/: CMakeLists.txt  TESTING.md  build_with_sanitizers.sh  opus_to_wav.cpp  wav_writer.cpp  wav_writer.h
host_examples/opus_to_wav/test/: measure_zerocopy.cpp  test_chunked.cpp  test_raw_packet.cpp  test_silent_channels.cpp
include/micro_opus/: ogg_opus_decoder.h  opus_packet_decoder.h
patches/: README.md
patches/celt/: arch.h  celt.c  mathops.h  pitch.h
patches/celt/xtensa/: mathops_lx7.c  mathops_lx7.h
patches/diffs/: bands_timing.patch  celt_arch.patch  celt_celt.patch  celt_mathops.patch  celt_pitch.patch  celt_stack_alloc.patch  celt_timing.patch  pvq_timing.patch  silk_SigProc_FIX.patch  silk_SigProc_FLP.patch  silk_macros.patch  vq_quant_bands_timing.patch
patches/silk/: SigProc_FIX.h  macros.h
patches/silk/xtensa/: SigProc_FIX_lx7.h  macros_lx7.h
script/: clang-tidy.sh
src/: ogg_opus_decoder.cpp  opus_header.cpp  opus_header.h  opus_packet_decoder.cpp
tests/: .clang-tidy  .gitignore  CMakeLists.txt  README.md  fetch_vectors.sh
tests/conformance/: decode_vectors.cpp  run_vectors.sh
tests/qemu/: CMakeLists.txt  README.md  compare.sh  partitions.csv  platformio.ini  run-image.sh  run-qemu.sh  sdkconfig.defaults  sdkconfig.fixed.defaults
tests/qemu/main/: CMakeLists.txt  embed_vectors.py  qemu_opus_test.cpp  qemu_vectors.h
tests/support/: ogg_mux.h
tests/tools/: measure_zerocopy.cpp
tests/unit/: test_chunked.cpp  test_opus_header.cpp  test_raw_packet.cpp  test_silent_channels.cpp
